--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3.11-slim
-COPY requirements.txt .
+
+WORKDIR /app
+COPY api/requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY app.py app.py
+COPY api/main.py .
 
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
