--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.11-slim
 
 WORKDIR /app
-COPY api/requirements.txt .
+COPY ./api/requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
